<resources>
    <string name="app_name">My Details</string>
    <string name="home">Home</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="third_fragment_label">Third Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="hello_third_fragment">Hello third fragment. Arg: %1$s</string>
    <string name="mainActivity">Goto Main</string>
    <string name="f_name"> <font color="red"> * </font> First Name</string>
    <string name="l_name">Last Name</string>
    <string name="phone">Phone Number</string>
    <string name="dob">Date of Birth</string>
    <string name="next_1">Next</string>
    <string name="enter_details">Enter Details</string>
    <string name="gender_radio">Gender </string>
    <string name="emp_no">Employee No.</string>
    <string name="emp_name">Employee Name</string>
    <string name="designation">Designation</string>
    <string name="bank_name">Bank Name</string>
    <string name="account_no">Account No.</string>
    <string name="ifsc">IFSC</string>
    <string name="submit">Submit</string>
    <string name="empty_list">Empty Lists</string>
    <string name="add_image">Add Image</string>
</resources>