<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <ScrollView
        android:id="@+id/scrollView_employee"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/linear_emp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:orientation="vertical"
            tools:context=".EmployeeInfoFragment">


            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/enter_details"
                android:textSize="20sp"
                android:textStyle="bold"
                />

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:hint="@string/emp_no">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edt_emp_no"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="number"
                    android:textColor="@android:color/black"
                    android:minHeight="35dp"
                    android:textSize="16sp">

                </com.google.android.material.textfield.TextInputEditText>

            </com.google.android.material.textfield.TextInputLayout>

         <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:hint="@string/emp_name">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edt_emp_name"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="textCapWords"
                    android:minHeight="35dp"
                    android:textColor="@android:color/black"
                    android:textSize="16sp">

                </com.google.android.material.textfield.TextInputEditText>

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:hint="@string/designation">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edt_emp_dsg"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="textCapWords"
                    android:minHeight="35dp"
                    android:textColor="@android:color/black"
                    android:textSize="16sp">

                </com.google.android.material.textfield.TextInputEditText>

            </com.google.android.material.textfield.TextInputLayout>

            <androidx.appcompat.widget.AppCompatSpinner
                android:id="@+id/account_type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                style="?android:attr/spinnerItemStyle"
                android:drawableRight="@drawable/ic_baseline_arrow_drop_down_24"
                android:minHeight="45dp"/>

            <androidx.appcompat.widget.AppCompatSpinner
                android:id="@+id/work_exp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="?android:attr/spinnerItemStyle"
                android:drawableRight="@drawable/ic_baseline_arrow_drop_down_24"
                android:layout_marginTop="8dp"
                android:minHeight="45dp"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_next_employee"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="20dp"
                android:text="@string/next_1"/>



        </LinearLayout>

    </ScrollView>

</layout>